--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,12 +59,13 @@ android {
 
 
     buildTypes {
-        release {
+       release {
             shrinkResources true
             minifyEnabled true
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
+        //   signingConfig signingConfigs.debug
         }
     }
 }
